# prefect_marimo_starter

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  INSTRUCTIONS.txt  README.md  REVIEW_REPORT.md  deploy.py  prefect.yaml  pyproject.toml  review_report.md
.codex/skills/: marimo.md  prefect-marimo.md  prefect.md
.codex/skills/marimo/: SKILL.md
.codex/skills/prefect/: SKILL.md
.codex/skills/prefect-marimo/: SKILL.md
.cursor/: rules.old
.cursor/rules/: prefect-deployment-rules.mdc  prefect-marimo-patterns.mdc  python-general.mdc
.github/: copilot-instructions.md
.qoder/quests/: adopt-asx-sql-files-COMPLETE.md  adopt-asx-sql-files.md  fix-local-setup-and-tests.md  fix-skill-setup.md
adoption/: AGENTS.md  README.md  pyproject.toml
adoption/docs/: INTEGRATION_GUIDE.md
adoption/src/fefta/: __init__.py  fefta_crawler.py  models.py
adoption/src/tdnet/: __init__.py  announcement_helpers.py  announcement_models.py  announcement_scraper.py  search_analysis.py  search_backfill.py  search_models.py  search_scraper.py
config/: settings.yaml
docs/: ADDING_FLOWS.md  DEPLOYMENT.md  DEVELOPMENT.md  Deploy_Prefect_Onto_Window_Server.md  MCP_SERVER_SETUP.md  TROUBLESHOOTING.md  testing.md
docs/asx/: asx_pipe_scraper_guide.md
docs/fefta/: FEFTA_CRAWLER_GUIDE.md  FEFTA_Crawler_Implementation_Prompt.md
docs/llm/: cursor_rules_creation_guide.md  new_service_coding_guide.md
docs/references/: marimo_llms.txt  prefect_llm.txt  prefect_llms-full.txt
docs/tdnet/: DATA_BACKFILL_STRATEGY.md  SCRAPER_TECHNICAL_GUIDE.md  SEARCH_SCHEMA.md  TDNET_ANNOUNCEMENT_SCRAPER_GUIDE.md  TDNET_SCRAPER_TECHNICAL_GUIDE.md  TDNET_SEARCH_OPTIMIZATION.md  TDNET_SEARCH_SCHEMA.md
notebooks/asx/: asx_announcement_scraper.py  asx_appendix5b_scraper.py  asx_pipe_scraper.py
notebooks/etl/: daily_data_sync.py  extract_data.py
notebooks/examples/: prefect_workflow_sample.py
notebooks/reports/: daily_summary.py
scripts/local/: build.sh  setup-dev.sh  validate-setup.ps1  validate-setup.sh
scripts/windows/: 01_download_offline_assets.ps1  02_install_server_env.ps1  03_configure_services.ps1  04_setup_iis_proxy.ps1  05_configure_firewall.ps1  deploy.ps1
scripts/windows/configs/: PrefectServer.xml  PrefectWorker.xml
sql/: README.md
sql/asx/: create_announcement.sql  create_appendix_5b_report.sql  create_company.sql  create_pipe_announcement.sql  delete_announcement.sql  delete_appendix_5b_report.sql  delete_company.sql  delete_pipe_announcement.sql  read_announcement.sql  read_appendix_5b_report.sql  read_company.sql  read_pipe_announcement.sql  schema.sql  update_announcement.sql  update_appendix_5b_report.sql  update_company.sql  update_pipe_announcement.sql
sql/fefta/: schema.sql
sql/fefta/queries/: find_latest_changes.sql  get_latest_list.sql  upsert_fefta_listed_company.sql  upsert_fefta_source.sql
sql/sales/: get_customer_by_id.sql  simple_query.sql
sql/tdnet/announcement/: schema.sql
sql/tdnet/search/: schema.sql
src/services/asx_scraper/: __init__.py  asx_scraper_service.py  (+5 more)
src/shared_utils/: config.py  database.py  notifications.py  prefect_notifications.py
tests/: conftest.py  test_config.py
tests/integration/: test_notebooks.py
tests/notebooks/: test_exchange_email_service.py  test_mssql_service.py
tests/unit/: test_config.py  test_mssql_service_unit.py  test_prefect_notifications.py
(+64 files in other folders)
