[project]
name = "prefect-marimo-workflows"
version = "1.0.0"
description = "Unified Prefect + Marimo workflow notebooks"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0.0,<4.0.0",
    "marimo>=0.10.9",
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "altair>=5.0.0",
    "exchangelib>=5.0.0",
    "pyodbc>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "requests>=2.31.0",
    # TDnet and FEFTA module dependencies
    "httpx>=0.28.1",
    "lxml>=5.0.0",
    "pypdf>=5.0.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: Integration tests that may require external resources",
    "smoke: Smoke tests that verify live endpoints with actual HTTP requests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
